# esercitazione2-23-24

./: CMakeLists.txt  create_hist_eq_test_files
src/: create_hist_eq_test_files.cpp  filter_image.cpp  image.h  resize_image.cpp
src/test/: test1.cpp
